Added Aqueduct, fixed issue with network messages